--- a/airest_article.ipynb
+++ b/airest_article.ipynb
@@ -791,11 +791,157 @@
     "      df[\"annotator_sentiment\"], df[\"sentiment_pred_1epoch\"],\n",
     "      target_names=[\"negative (−1)\", \"neutral (0)\", \"positive (+1)\"]))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a971ee9",
+   "metadata": {},
+   "source": [
+    "# Ukr -> Eng -> Sentiment by Vader (default sentiment in Openwillis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "576f7992",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uk2en_like_space.py\n",
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "MODEL_NAME = \"Yehor/kulyk-uk-en\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "torch_dtype = torch.bfloat16\n",
+    "\n",
+    "REVISION = None\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, revision=REVISION)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    MODEL_NAME,\n",
+    "    device_map=device,\n",
+    "    torch_dtype=torch_dtype,\n",
+    "    revision=REVISION,\n",
+    ")\n",
+    "model.eval()\n",
+    "\n",
+    "def translate_like_space(text: str) -> str:\n",
+    "    prompt = \"Translate the text to English:\\n\" + text \n",
+    "    input_ids = tokenizer.apply_chat_template(\n",
+    "        [{\"role\": \"user\", \"content\": prompt}],\n",
+    "        add_generation_prompt=True,\n",
+    "        return_tensors=\"pt\",\n",
+    "        tokenize=True,\n",
+    "    ).to(model.device)\n",
+    "\n",
+    "    with torch.inference_mode():\n",
+    "        output = model.generate(\n",
+    "            input_ids,\n",
+    "            max_new_tokens=2048,\n",
+    "            do_sample=False,              # greedy\n",
+    "            repetition_penalty=1.05,     \n",
+    "        )\n",
+    "\n",
+    "    gen = output[:, input_ids.shape[1]:]\n",
+    "    return tokenizer.batch_decode(gen, skip_special_tokens=True)[0].strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca568d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "uk = \"Над Україною збито ракету та 7 із 8 «Шахедів»\"\n",
+    "print(translate_like_space(uk))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0007732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "df['translated_text'] = df['document_content'].progress_apply(translate_like_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "602261d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "def vader_label_by_max(text: str) -> int:\n",
+    "    scores = analyzer.polarity_scores(text)\n",
+    "    top = max(('neg', 'neu', 'pos'), key=lambda k: scores[k])\n",
+    "    return {'neg': -1.0, 'neu': 0.0, 'pos': 1.0}[top]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d4b8355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df['vader_analysis'] = df['translated_text'].apply(vader_label_by_max)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "098c1ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['vader_analysis'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71c0cba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"annotator_sentiment\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e58967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------------- #\n",
+    "# 4.  Evaluation                                                       #\n",
+    "# -------------------------------------------------------------------- #\n",
+    "acc = accuracy_score(df[\"annotator_sentiment\"], df[\"vader_analysis\"])\n",
+    "print(f\"Accuracy: {acc:.3%}\")\n",
+    "\n",
+    "print(classification_report(\n",
+    "      df[\"annotator_sentiment\"], df[\"vader_analysis\"],\n",
+    "      target_names=[\"negative (−1)\", \"neutral (0)\", \"positive (+1)\"]))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "phd_311_venv",
+   "display_name": "3.10.12",
    "language": "python",
    "name": "python3"
   },
@@ -809,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
