check translation accuracy

--- a/airest_article.ipynb
+++ b/airest_article.ipynb
@@ -1648,6 +1648,233 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f30adebc",
+   "metadata": {},
+   "source": [
+    "# check translation accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e95f0df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "MODEL_NAME = \"Yehor/kulyk-uk-en\"\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "torch_dtype = torch.bfloat16\n",
+    "\n",
+    "REVISION = None\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, revision=REVISION)\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    MODEL_NAME,\n",
+    "    device_map=device,\n",
+    "    torch_dtype=torch_dtype,\n",
+    "    revision=REVISION,\n",
+    ")\n",
+    "model.eval()\n",
+    "\n",
+    "def translate_like_space(text: str) -> str:\n",
+    "    prompt = \"Translate the text to English:\\n\" + text\n",
+    "    input_ids = tokenizer.apply_chat_template(\n",
+    "        [{\"role\": \"user\", \"content\": prompt}],\n",
+    "        add_generation_prompt=True,\n",
+    "        return_tensors=\"pt\",\n",
+    "        tokenize=True,\n",
+    "    ).to(model.device)\n",
+    "\n",
+    "    with torch.inference_mode():\n",
+    "        output = model.generate(\n",
+    "            input_ids,\n",
+    "            max_new_tokens=2048,\n",
+    "            do_sample=False,              # greedy\n",
+    "            repetition_penalty=1.05,\n",
+    "        )\n",
+    "\n",
+    "    gen = output[:, input_ids.shape[1]:]\n",
+    "    return tokenizer.batch_decode(gen, skip_special_tokens=True)[0].strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7b972ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"dcapwoz_all_plus_ukr.csv\")\n",
+    "\n",
+    "from tqdm.auto import tqdm\n",
+    "tqdm.pandas()\n",
+    "\n",
+    "df['Text_eng_back'] = df['Text'].progress_apply(translate_like_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf9e21a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from lexicalrichness import LexicalRichness\n",
+    "from comet import download_model, load_from_checkpoint\n",
+    "import nltk\n",
+    "from nltk.translate.meteor_score import meteor_score\n",
+    "\n",
+    "nltk.download(\"wordnet\", quiet=True)\n",
+    "nltk.download(\"omw-1.4\", quiet=True)\n",
+    "\n",
+    "EN_COL = \"Text\"\n",
+    "UA_COL = \"Text_ukr\"\n",
+    "UA_REF_COL = \"ua_ref\"\n",
+    "EN_BACK_COL = \"Text_eng_back\"\n",
+    "\n",
+    "MIN_TOKENS = 5\n",
+    "MATTR_WINDOW = 50\n",
+    "\n",
+    "TOKEN_RE = re.compile(r\"[^\\W\\d_]+\", re.UNICODE)\n",
+    "\n",
+    "def tokenize(text: str) -> list[str]:\n",
+    "    if not isinstance(text, str):\n",
+    "        return []\n",
+    "    return TOKEN_RE.findall(text.lower())\n",
+    "\n",
+    "def token_len_series(s: pd.Series) -> pd.Series:\n",
+    "    return s.map(lambda x: len(tokenize(x)) if isinstance(x, str) else np.nan)\n",
+    "\n",
+    "def safe_mean_std(x) -> tuple[float, float]:\n",
+    "    # на случай дублей колонок\n",
+    "    if isinstance(x, pd.DataFrame):\n",
+    "        x = x.iloc[:, -1]\n",
+    "    x = pd.to_numeric(x, errors=\"coerce\").dropna()\n",
+    "    if x.empty:\n",
+    "        return float(\"nan\"), float(\"nan\")\n",
+    "    return float(x.mean()), float(x.std(ddof=1))\n",
+    "\n",
+    "# --- COMET QE ---\n",
+    "MODEL_NAME = \"Unbabel/wmt22-cometkiwi-da\"\n",
+    "model_path = download_model(MODEL_NAME)\n",
+    "comet_model = load_from_checkpoint(model_path)\n",
+    "\n",
+    "def compute_comet_qe(df: pd.DataFrame, src_col: str, mt_col: str, gpus: int = 0) -> tuple[pd.Series, float]:\n",
+    "    data = [{\"src\": s, \"mt\": t} for s, t in zip(df[src_col], df[mt_col])]\n",
+    "    out = comet_model.predict(data, batch_size=8, gpus=gpus)\n",
+    "    return pd.Series(out.scores, index=df.index), float(out.system_score)\n",
+    "\n",
+    "# --- METEOR ---\n",
+    "def mean_meteor(hyp: list[str], ref: list[str]) -> float:\n",
+    "    scores = []\n",
+    "    for h, r in zip(hyp, ref):\n",
+    "        h_tok = tokenize(h)\n",
+    "        r_tok = tokenize(r)\n",
+    "        scores.append(meteor_score([r_tok], h_tok))\n",
+    "    return float(np.mean(scores)) if scores else float(\"nan\")\n",
+    "\n",
+    "# --- Lexical diversity ---\n",
+    "def lexical_stats(series: pd.Series, mattr_window: int = 50) -> pd.DataFrame:\n",
+    "    rows = []\n",
+    "    for text in series:\n",
+    "        toks = tokenize(text) if isinstance(text, str) else []\n",
+    "        if not toks:\n",
+    "            rows.append({\"ttr\": np.nan, \"mattr\": np.nan, \"n_tokens\": np.nan})\n",
+    "            continue\n",
+    "\n",
+    "        lex = LexicalRichness(\" \".join(toks))\n",
+    "        rows.append({\n",
+    "            \"ttr\": float(lex.ttr),\n",
+    "            \"mattr\": float(lex.mattr(window_size=min(mattr_window, max(5, len(toks))))),\n",
+    "            \"n_tokens\": float(len(toks)),\n",
+    "        })\n",
+    "    return pd.DataFrame(rows, index=series.index)\n",
+    "\n",
+    "# ----------------- RUN -----------------\n",
+    "# path_to_dataset = 'dcapwoz_all_plus_ukr.csv'\n",
+    "# df = pd.read_csv(path_to_dataset)  # must have at least EN_COL, UA_COL\n",
+    "\n",
+    "missing = [c for c in (EN_COL, UA_COL) if c not in df.columns]\n",
+    "if missing:\n",
+    "    raise KeyError(f\"Missing required columns: {missing}. Available: {list(df.columns)}\")\n",
+    "\n",
+    "df[\"comet_qe\"], comet_system = compute_comet_qe(\n",
+    "    df,\n",
+    "    src_col=EN_COL,\n",
+    "    mt_col=UA_COL,\n",
+    ")\n",
+    "print(\"COMET-QE system score:\", comet_system)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06212cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2) Sentence length\n",
+    "en_len_col = f\"token_len_{EN_COL}\"\n",
+    "ua_len_col = f\"token_len_{UA_COL}\"\n",
+    "df[en_len_col] = token_len_series(df[EN_COL])\n",
+    "df[ua_len_col] = token_len_series(df[UA_COL])\n",
+    "\n",
+    "TRIM_Q = 0.995  # отсекаем top 5%\n",
+    "\n",
+    "en_len = df[en_len_col]\n",
+    "ua_len = df[ua_len_col]\n",
+    "\n",
+    "en_thr = en_len.quantile(TRIM_Q)\n",
+    "ua_thr = ua_len.quantile(TRIM_Q)\n",
+    "\n",
+    "mask_en_trim = en_len.notna() & (en_len <= en_thr)\n",
+    "mask_ua_trim = ua_len.notna() & (ua_len <= ua_thr)\n",
+    "\n",
+    "mask_trim_both = mask_en_trim & mask_ua_trim\n",
+    "en_mean_trim, en_std_trim = safe_mean_std(en_len[mask_en_trim])\n",
+    "ua_mean_trim, ua_std_trim = safe_mean_std(ua_len[mask_ua_trim])\n",
+    "\n",
+    "print(\"EN len 99.5% mean±std:\", en_mean_trim, en_std_trim,)\n",
+    "print(\"UA len 99.5% mean±std:\", ua_mean_trim, ua_std_trim,)\n",
+    "\n",
+    "df[\"len_ratio_ua_en\"] = df[ua_len_col] / df[en_len_col].replace(0, np.nan)\n",
+    "ratio_mean, ratio_std = safe_mean_std(df[\"len_ratio_ua_en\"])\n",
+    "print(f\"Length ratio UA/EN mean±std: {ratio_mean:.3f} ± {ratio_std:.3f}\")\n",
+    "\n",
+    "# 3) Lexical diversity with proper masks (>= MIN_TOKENS AND notna)\n",
+    "mask_en = df[en_len_col].notna() & (df[en_len_col] >= MIN_TOKENS)\n",
+    "mask_ua = df[ua_len_col].notna() & (df[ua_len_col] >= MIN_TOKENS)\n",
+    "\n",
+    "df = df.drop(columns=[c for c in df.columns if c.startswith((\"en_\", \"ua_\"))], errors=\"ignore\")\n",
+    "\n",
+    "df_lex_en = lexical_stats(df.loc[mask_en, EN_COL], mattr_window=MATTR_WINDOW).add_prefix(\"en_\")\n",
+    "df_lex_ua = lexical_stats(df.loc[mask_ua, UA_COL], mattr_window=MATTR_WINDOW).add_prefix(\"ua_\")\n",
+    "\n",
+    "df = df.join(df_lex_en, how=\"left\").join(df_lex_ua, how=\"left\")\n",
+    "\n",
+    "en_ttr_mean, en_ttr_std = safe_mean_std(df[\"en_ttr\"])\n",
+    "ua_ttr_mean, ua_ttr_std = safe_mean_std(df[\"ua_ttr\"])\n",
+    "en_mattr_mean, en_mattr_std = safe_mean_std(df[\"en_mattr\"])\n",
+    "ua_mattr_mean, ua_mattr_std = safe_mean_std(df[\"ua_mattr\"])\n",
+    "\n",
+    "print(f\"TTR EN mean±std (filtered >= {MIN_TOKENS} toks): {en_ttr_mean:.4f} ± {en_ttr_std:.4f}\")\n",
+    "print(f\"TTR UA mean±std (filtered >= {MIN_TOKENS} toks): {ua_ttr_mean:.4f} ± {ua_ttr_std:.4f}\")\n",
+    "print(f\"MATTR EN mean±std (filtered >= {MIN_TOKENS} toks): {en_mattr_mean:.4f} ± {en_mattr_std:.4f}\")\n",
+    "print(f\"MATTR UA mean±std (filtered >= {MIN_TOKENS} toks): {ua_mattr_mean:.4f} ± {ua_mattr_std:.4f}\")\n",
+    "\n",
+    "df[\"mattr_ratio_ua_en\"] = df[\"ua_mattr\"] / df[\"en_mattr\"].replace(0, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3688a1b9",
    "metadata": {},
    "source": [
