--- a/airest_article.ipynb
+++ b/airest_article.ipynb
@@ -2914,9 +2914,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8232a480",
+   "metadata": {},
+   "source": [
+    "# validation for Section E"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cdab3345",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd0d0396",
    "metadata": {},
    "outputs": [],
    "source": []
